--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ copyright = "&copy;2020 Charbel Tabet"
 
   # Metadata for search engines and social sharing
   author = "Charbel Tabet"
-  description = "Split is a centrally-divided layout for a professional online presence with a big image or video left with alongside content."
+  description = "Tech oriented person interested in science, technology and programming. Codes in various languages since an early age."
   shareImage = "images/background.jpeg"
   twitterHandle = "sharbeltabet"
 
